--- a/docker-compose-ekl.yml
+++ b/docker-compose-ekl.yml
@@ -16,6 +16,7 @@ services:
       co.elastic.logs/enabled: false
     environment: 
       - discovery.type=single-node
+      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
     image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
     healthcheck:
       test: ["CMD", "curl", "-s", "-f", "http://localhost:9200/_cat/health"]
