--- a/docker-compose-ekl.yml
+++ b/docker-compose-ekl.yml
@@ -1,22 +1,11 @@
 version: "3.1"
 services:
-  filebeat:
-    labels:
-      co.elastic.logs/enabled: false
-    user: root
-    image: docker.elastic.co/beats/filebeat:7.14.0
-    command: filebeat -e -strict.perms=false
-    volumes:
-      - ./filebeat.docker.yml:/usr/share/filebeat/filebeat.yml
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-
   elasticsearch:
     labels:
       co.elastic.logs/enabled: false
     environment: 
       - discovery.type=single-node
-      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+      - "ES_JAVA_OPTS=-Xms512M -Xmx512M"
     image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
     healthcheck:
       test: ["CMD", "curl", "-s", "-f", "http://localhost:9200/_cat/health"]
