--- a/docker-compose-ekl.yml
+++ b/docker-compose-ekl.yml
@@ -6,6 +6,8 @@ services:
     environment: 
       - discovery.type=single-node
       - "ES_JAVA_OPTS=-Xms512M -Xmx512M"
+      - ELASTIC_USERNAME=elastic
+      - ELASTIC_PASSWORD=123456
     image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
     healthcheck:
       test: ["CMD", "curl", "-s", "-f", "http://localhost:9200/_cat/health"]
