--- a/docker-compose-ekl.yml
+++ b/docker-compose-ekl.yml
@@ -20,6 +20,9 @@ services:
   kibana:
     labels:
       co.elastic.logs/enabled: false
+    environment:
+    - ELASTICSEARCH_USERNAME=elastic
+    - ELASTICSEARCH_PASSWORD=123456
     image: docker.elastic.co/kibana/kibana:7.14.0
     depends_on:
       - elasticsearch
