--- a/docker-compose-ekl.yml
+++ b/docker-compose-ekl.yml
@@ -24,6 +24,9 @@ services:
     - ELASTICSEARCH_USERNAME=elastic
     - ELASTICSEARCH_PASSWORD=123456
     image: docker.elastic.co/kibana/kibana:7.14.0
+    configs:
+    - source: kibana_config
+      target: /usr/share/kibana/config/kibana.yml
     depends_on:
       - elasticsearch
     healthcheck:
@@ -33,3 +36,6 @@ services:
       retries: 80
     ports:
       - 5601:5601
+configs:
+  kibana_config:
+    file: kibana.yml
