--- a/docker-compose-ekl.yml
+++ b/docker-compose-ekl.yml
@@ -1,4 +1,4 @@
-version: "3.1"
+version: "3.3"
 services:
   elasticsearch:
     labels:
@@ -25,8 +25,7 @@ services:
     - ELASTICSEARCH_PASSWORD=123456
     image: docker.elastic.co/kibana/kibana:7.14.0
     configs:
-    - source: kibana_config
-      target: /usr/share/kibana/config/kibana.yml
+    - kibana_config
     depends_on:
       - elasticsearch
     healthcheck:
@@ -38,4 +37,4 @@ services:
       - 5601:5601
 configs:
   kibana_config:
-    file: kibana.yml
+    file: ./kibana.yml
