--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.1"
+version: "3.3"
 services:
     server:
         build:
@@ -10,3 +10,13 @@ services:
             co.elastic.logs/json.overwrite_keys: true
             co.elastic.logs/json.add_error_key: true
             co.elastic.logs/json.expand_keys: true
+    filebeat:
+        labels:
+        co.elastic.logs/enabled: false
+        user: root
+        image: docker.elastic.co/beats/filebeat:7.14.0
+        command: filebeat -e -strict.perms=false
+        volumes:
+        - ./filebeat.docker.yml:/usr/share/filebeat/filebeat.yml
+        - /var/lib/docker/containers:/var/lib/docker/containers:ro
+        - /var/run/docker.sock:/var/run/docker.sock:ro
